src/test/ui/transmutability/enums.stderr
error[E0277]: the trait bound `Unspecified: BikeshedIntrinsicFrom<WellDefined, Context, false, false, false, false>` is not satisfied
  --> $DIR/enums.rs:13:58
   |
LL |     assert_is_transmutable_assume_nothing::<WellDefined, Unspecified>();
   |                                                          ^^^^^^^^^^^ the trait `BikeshedIntrinsicFrom<WellDefined, Context, false, false, false, false>` is not implemented for `Unspecified`
   |
note: required by a bound in `assert_is_transmutable_assume_nothing`
  --> $DIR/enums.rs:64:9
   |
LL | fn assert_is_transmutable_assume_nothing<Src, Dst>()
   |    ------------------------------------- required by a bound in this
...
LL |         BikeshedIntrinsicFrom<Src, Context, false, false, false, false>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_assume_nothing`

error[E0277]: the trait bound `WellDefined: BikeshedIntrinsicFrom<Unspecified, Context, false, false, false, false>` is not satisfied
  --> $DIR/enums.rs:14:58
   |
LL |     assert_is_transmutable_assume_nothing::<Unspecified, WellDefined>();
   |                                                          ^^^^^^^^^^^ the trait `BikeshedIntrinsicFrom<Unspecified, Context, false, false, false, false>` is not implemented for `WellDefined`
   |
note: required by a bound in `assert_is_transmutable_assume_nothing`
  --> $DIR/enums.rs:64:9
   |
LL | fn assert_is_transmutable_assume_nothing<Src, Dst>()
   |    ------------------------------------- required by a bound in this
...
LL |         BikeshedIntrinsicFrom<Src, Context, false, false, false, false>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_assume_nothing`

error[E0277]: the trait bound `Unspecified: BikeshedIntrinsicFrom<Unspecified, Context, false, false, false, false>` is not satisfied
  --> $DIR/enums.rs:15:58
   |
LL |     assert_is_transmutable_assume_nothing::<Unspecified, Unspecified>();
   |                                                          ^^^^^^^^^^^ the trait `BikeshedIntrinsicFrom<Unspecified, Context, false, false, false, false>` is not implemented for `Unspecified`
   |
note: required by a bound in `assert_is_transmutable_assume_nothing`
  --> $DIR/enums.rs:64:9
   |
LL | fn assert_is_transmutable_assume_nothing<Src, Dst>()
   |    ------------------------------------- required by a bound in this
...
LL |         BikeshedIntrinsicFrom<Src, Context, false, false, false, false>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_assume_nothing`

error[E0277]: the trait bound `OnlyTag: BikeshedIntrinsicFrom<u8, Context, false, false, false, false>` is not satisfied
  --> $DIR/enums.rs:24:49
   |
LL |     assert_is_transmutable_assume_nothing::<u8, OnlyTag>();
   |                                                 ^^^^^^^ the trait `BikeshedIntrinsicFrom<u8, Context, false, false, false, false>` is not implemented for `OnlyTag`
   |
note: required by a bound in `assert_is_transmutable_assume_nothing`
  --> $DIR/enums.rs:64:9
   |
LL | fn assert_is_transmutable_assume_nothing<Src, Dst>()
   |    ------------------------------------- required by a bound in this
...
LL |         BikeshedIntrinsicFrom<Src, Context, false, false, false, false>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_assume_nothing`

error[E0277]: the trait bound `test_fail_with_data::TwoU8: BikeshedIntrinsicFrom<Same, Context, false, false, false, false>` is not satisfied
  --> $DIR/enums.rs:44:51
   |
LL |     assert_is_transmutable_assume_nothing::<Same, TwoU8>();
   |                                                   ^^^^^ the trait `BikeshedIntrinsicFrom<Same, Context, false, false, false, false>` is not implemented for `test_fail_with_data::TwoU8`
   |
note: required by a bound in `assert_is_transmutable_assume_nothing`
  --> $DIR/enums.rs:64:9
   |
LL | fn assert_is_transmutable_assume_nothing<Src, Dst>()
   |    ------------------------------------- required by a bound in this
...
LL |         BikeshedIntrinsicFrom<Src, Context, false, false, false, false>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_assume_nothing`

error[E0277]: the trait bound `StructB: BikeshedIntrinsicFrom<StructA, Context, false, false, false, false>` is not satisfied
  --> $DIR/enums.rs:53:54
   |
LL |     assert_is_transmutable_assume_nothing::<StructA, StructB>();
   |                                                      ^^^^^^^ the trait `BikeshedIntrinsicFrom<StructA, Context, false, false, false, false>` is not implemented for `StructB`
   |
note: required by a bound in `assert_is_transmutable_assume_nothing`
  --> $DIR/enums.rs:64:9
   |
LL | fn assert_is_transmutable_assume_nothing<Src, Dst>()
   |    ------------------------------------- required by a bound in this
...
LL |         BikeshedIntrinsicFrom<Src, Context, false, false, false, false>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_is_transmutable_assume_nothing`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
